--- a/BP_05_EX_Ch10.ipynb
+++ b/BP_05_EX_Ch10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNeo7Wm7lYPvx+oNaVyXRv5",
+      "authorship_tag": "ABX9TyPVpWcrRcP4o3wKfOfBgtb6",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,43 +29,6 @@
     {
       "cell_type": "code",
       "source": [
-        "from tkinter import *\n",
-        "\n",
-        "window = Tk()\n",
-        "button = Button(window, text=\"클릭하세요!\")\n",
-        "button.pack()\n",
-        "\n",
-        "window.mainloop()"
-      ],
-      "metadata": {
-        "id": "nGpMCqpuECP9"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "from tkinter import *\n",
-        "\n",
-        "def process():\n",
-        "  print(\"안녕하세요?\")\n",
-        "\n",
-        "window = Tk()\n",
-        "button = Button(window, text=\"클릭하세요!\", command=process)\n",
-        "button.pack()\n",
-        "\n",
-        "window.mainloop()"
-      ],
-      "metadata": {
-        "id": "ET1wzBEiG1wc"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "source": [
         "#문제1\n",
         "from tkinter import Tk, Label, Button\n",
         "\n",
@@ -82,6 +45,7 @@
         "close_button = Button(window, text=\"종료\", command=window.quit)\n",
         "close_button.pack()\n",
         "\n",
+        "#GUI화면 루프처리\n",
         "window.mainloop()"
       ],
       "metadata": {
@@ -93,21 +57,103 @@
     {
       "cell_type": "code",
       "source": [
-        "#문제3\n",
+        "#문제2\n",
         "from tkinter import *\n",
         "\n",
+        "def update_add():\n",
+        "  update(\"add\")\n",
+        "\n",
+        "def update_subtract():\n",
+        "  update(\"subtract\")\n",
+        "\n",
+        "def update_reset():\n",
+        "  update(\"reset\")\n",
+        "\n",
         "window = Tk()\n",
-        "label = Label(window, text=\"너무 높아요!!\")\n",
-        "label.pack()\n",
+        "total = 0\n",
+        "sum = Label(window)\n",
+        "sum.grid(row=0, column=1, columnspan=2)\n",
         "\n",
-        "e = Entry(window)\n",
-        "e.pack()\n",
+        "label = Label(window, text=\"현재 합계\")\n",
+        "label.grid(row=0, column=0)\n",
         "\n",
-        "b1 = Button(window, text=\"숫자를 입력\")\n",
-        "b2 = Button(window, text=\"게임을 다시 실행\")\n",
-        "b1.grid(row=0, column=0)\n",
-        "b2.grid(row=0, column=0)\n",
+        "entry = Entry(window)\n",
+        "entry.grid(row=1, column=0, columnspan=3)\n",
         "\n",
+        "add_button = Button(window, text=\"더하기(+)\", command=update_add)\n",
+        "subtract_button = Button(window, text=\"빼기(-)\", command=update_subtract)\n",
+        "reset_button = Button(window, text=\"초기화\", command=update_reset)\n",
+        "\n",
+        "add_button.grid(row=2, column=0)\n",
+        "subtract_button.grid(row=2, column=1)\n",
+        "reset_button.grid(row=2, column=2)\n",
+        "\n",
+        "def update(method):\n",
+        "  global total\n",
+        "  if method== \"add\":\n",
+        "    total +=int(entry.get())\n",
+        "  elif method == \"subtract\":\n",
+        "    total -= int(entry.get())\n",
+        "  else:\n",
+        "    total = 0\n",
+        "  sum['text'] = str(total)\n",
+        "  entry.delete(0, END)\n",
+        "\n",
+        "#GUI화면 루프처리\n",
+        "window.mainloop()"
+      ],
+      "metadata": {
+        "id": "Aocg5qiFU1fU"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#문제3\n",
+        "import random\n",
+        "from tkinter import *\n",
+        "  \n",
+        "window = Tk() \n",
+        "secret_number = random.randint(1, 100)\n",
+        "guess = None\n",
+        "num_guess = 0\n",
+        "\n",
+        "def guess_number():\n",
+        "  global num_guesses\n",
+        "  guess = int(entry.get())\n",
+        "  num_guess += 1\n",
+        "  if guess == secrect_number:\n",
+        "    message = \"축하합니다!!\"\n",
+        "  elif guess < secrect_number:\n",
+        "    message =\"너무 낮아요!!\"\n",
+        "  else:\n",
+        "    message = \"너무 높아요!!\"\n",
+        "  label['text']= massage\n",
+        "\n",
+        "def reset():\n",
+        "  global num_guesses\n",
+        "  entry.delete(0, END)\n",
+        "  secret_number = random.randint(1, 100)\n",
+        "  guess = 0\n",
+        "  num_guesses = 0\n",
+        "  message = \"1부터 100사이의 숫자를 추측하시오\"\n",
+        "  label['text']= message\n",
+        "\n",
+        "message = \"1부터 100사이의 숫자를 추측하시오\"\n",
+        "label = Label(window, text=message)\n",
+        "entry = Entry(window)\n",
+        "\n",
+        "guess_button = Button(window, text=\"숫자를 입력\", command=guess_number)\n",
+        "reset_button = Button(window, text=\"게임을 다시 실행\", command=reset)\n",
+        "\n",
+        "label.grid(row=0, column=0, columnspan=2, sticky=W+E)\n",
+        "entry.grid(row=1, column=0, columnspan=2, sticky=W+E)\n",
+        "guess_button.grid(row=2, column=0)\n",
+        "reset_button.grid(row=2, column=1)\n",
+        "\n",
+        "#GUI화면 루프처리\n",
         "window.mainloop()"
       ],
       "metadata": {
@@ -122,13 +168,31 @@
         "#문제4\n",
         "from tkinter import *\n",
         "\n",
-        "window = Tk()\n",
-        "l1 = Label(window, text=\"인치를 센티미디로 변환하는 프로그램:\")\n",
-        "l2 = Label(window, text=\"인치를 입력하시오:\") \n",
-        "l1.pack()\n",
-        "l2.grid(row=0, column=0)\n",
+        "#인치를 센티미터로 변환시키는 수식 형성\n",
+        "def do_convert():\n",
+        "  inch_val = float(cvt_from.get())\n",
+        "  centimeters_val = inch_val * 2.54\n",
+        "  cvt_to.set('%s 센티미터' % centimeters_val)\n",
         "\n",
-        "e = Entry(window,int)\n"
+        "root = Tk()\n",
+        "cvt_from = StringVar()\n",
+        "cvt_to = StringVar()\n",
+        "\n",
+        "l1 = Label(root, text=\"인치를 센티미디로 변환하는 프로그램:\")\n",
+        "l1.grid(row=0, column=0, columnspan=2)\n",
+        "from_l1 = Label(root, text='인치를 입력하시오:')\n",
+        "from_l1.grid(row=1, column=0)\n",
+        "from_entry = Entry(root, textvariable=cvt_from)\n",
+        "from_entry.grid(row=0, column=1)\n",
+        "\n",
+        "to_l1 = Label(root, text=\"변환결과:\")\n",
+        "to_l1.grid(row=2, column=0)\n",
+        "result_l1 = Label(root, textvariable=cvt_to)\n",
+        "result_l1.grid(row=2, column=1)\n",
+        "\n",
+        "convert_btn = Button(root, text=\"변환!\", command=do_convert)\n",
+        "convert_btn.grid(row=3, column=1)\n",
+        "root.mainloop()"
       ],
       "metadata": {
         "id": "aSTkHLfNFJ7G"
@@ -162,6 +226,7 @@
         "b1.grid(row=3, column=0)\n",
         "b2.grid(row=3, column=1)\n",
         "\n",
+        "#GUI화면 루프처리\n",
         "window.mainloop()"
       ],
       "metadata": {
@@ -169,6 +234,125 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#문제6\n",
+        "from random import *\n",
+        "from tkinter import *\n",
+        "\n",
+        "# 선택하는 부분\n",
+        "def user_choice_rock():\n",
+        "  user_choice = \"rock\"\n",
+        "  turn(user_choice)\n",
+        "  user_image.configure(image=rock_image)\n",
+        "def user_choice_paper():\n",
+        "  user_choice = \"paper\"\n",
+        "  turn(user_choice)\n",
+        "  user_image.configure(image=paper_image)\n",
+        "def user_choice_scissors():\n",
+        "  user_choice = \"scissors\"\n",
+        "  turn(user_choice)\n",
+        "  user_image.configure(image=scissors_image)\n",
+        "\n",
+        "#게임부분\n",
+        "def turn(user_choice):\n",
+        "  oppo = ['rock', 'paper', 'scissors']\n",
+        "  oppo_choice=oppo[randint(0,2)]\n",
+        "  if(oppo_choice=='rock'):\n",
+        "    oppo_image.configure(image=rock_image)\n",
+        "    if(user_choice=='paper'):\n",
+        "      turn_result.configure(text=\"사용자 승!\", fg=\"green\")\n",
+        "      compare.configure(text=\">>>>>\")\n",
+        "    elif(user_choice=='scissors'):\n",
+        "      turn_result.configure(text=\"컴퓨터 승!\", fg=\"red\")\n",
+        "      compare.configure(text=\"<<<<<\")\n",
+        "    else:\n",
+        "      turn_result.configure(text=\"무승부\", fg=\"gray\")\n",
+        "      compare.configure(text=\"=====\")\n",
+        "\n",
+        "  elif(oppo_choice=='paper'):\n",
+        "    oppo_image.configure(image=paper_image)\n",
+        "    if(user_choice=='scissors'):\n",
+        "      turn_result.configure(text=\"사용자 승!\", fg=\"green\")\n",
+        "      compare.configure(text=\">>>>>\")\n",
+        "    elif(user_choice=='rock'):\n",
+        "      turn_result.configure(text=\"컴퓨터 승!\", fg=\"red\")\n",
+        "      compare.configure(text=\"<<<<<\")\n",
+        "    else:\n",
+        "      turn_result.configure(text=\"무승부\", fg=\"gray\")\n",
+        "      compare.configure(text=\"=====\")\n",
+        "\n",
+        "  elif(oppo_choice=='scissors'):\n",
+        "    oppo_image.configure(image=scissors_image)\n",
+        "    if(user_choice=='rock'):\n",
+        "      turn_result.configure(text=\"사용자 승!\", fg=\"green\")\n",
+        "      compare.configure(text=\">>>>>\")\n",
+        "    elif(user_choice=='paper'):\n",
+        "      turn_result.configure(text=\"컴퓨터 승!\", fg=\"red\")\n",
+        "      compare.configure(text=\"<<<<<\")\n",
+        "    else:\n",
+        "      turn_result.configure(text=\"무승부\", fg=\"gray\")\n",
+        "      compare.configure(text=\"=====\")\n",
+        "\n",
+        "#메인 프로그램\n",
+        "main_window = Tk()\n",
+        "rock_button = Button(main_window, width=20, text=\"바위\", justify=CENTER, \n",
+        "                     command=user_choice_rock, activebackground='black',\n",
+        "                     activeforeground='white')\n",
+        "paper_button = Button(main_window, width=20, text=\"보\", justify=CENTER, \n",
+        "                     command=user_choice_paper, activebackground='black',\n",
+        "                     activeforeground='white')\n",
+        "scissors_button = Button(main_window, width=20, text=\"가위\", justify=CENTER, \n",
+        "                     command=user_choice_scissors, activebackground='black',\n",
+        "                     activeforeground='white')\n",
+        "rock_image = PhotoImage(file=\"d:/python/rock.gif\")\n",
+        "paper_image = PhotoImage(file=\"d:/python/paper.gif\")\n",
+        "scissors_image = PhotoImage(file=\"d:/python/scissors.gif\")\n",
+        "\n",
+        "user_image = Label(text=\"사용자\", image=rock_image)\n",
+        "user_image.image = rock_imgae\n",
+        "compare = Label(main_window, justify=CENTER, font=(\"Helvetica\", 30))\n",
+        "oppo_image = Label(text=\"컴퓨터\", image=paper_image)\n",
+        "oppo_image.image = paper_image\n",
+        "turn_result = Label(main_window, width=20, justify=CENTER, font=(\"Helvetica\", 20))\n",
+        "\n",
+        "#그리드 생성\n",
+        "rock_button.grid(row=5, column=1)\n",
+        "paper_button.grid(row=5, column=2)\n",
+        "scissors_button.grid(row=5, column=3)\n",
+        "user_image.grid(row=3, column=1)\n",
+        "compare.grid(row=3, column=2)\n",
+        "oppo_image.grid(row=3, column=3)\n",
+        "turn_result.grid(row=4, column=2)\n",
+        "\n",
+        "#GUI화면 루프처리\n",
+        "main_window.mainloop()"
+      ],
+      "metadata": {
+        "id": "bmoDQqJNEkMW",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 407
+        },
+        "outputId": "09b32090-f270-4db2-fa2d-da31c94329d2"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "TclError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mTclError\u001b[0m                                  Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-f00807f03a3e>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     58\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     59\u001b[0m \u001b[0;31m#메인 프로그램\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 60\u001b[0;31m \u001b[0mmain_window\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     61\u001b[0m rock_button = Button(main_window, width=20, text=\"바위\", justify=CENTER, \n\u001b[1;32m     62\u001b[0m                      \u001b[0mcommand\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0muser_choice_rock\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mactivebackground\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'black'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/usr/lib/python3.7/tkinter/__init__.py\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, screenName, baseName, className, useTk, sync, use)\u001b[0m\n\u001b[1;32m   2021\u001b[0m                 \u001b[0mbaseName\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mbaseName\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mext\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2022\u001b[0m         \u001b[0minteractive\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2023\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtk\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0m_tkinter\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcreate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mscreenName\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mbaseName\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclassName\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0minteractive\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mwantobjects\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0museTk\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0msync\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0muse\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2024\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0museTk\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2025\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_loadtk\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mTclError\u001b[0m: no display name and no $DISPLAY environment variable"
+          ]
+        }
+      ]
     }
   ]
 }
