Colaboratory를 통해 생성됨

--- a/BP_05_EX_Ch10.ipynb
+++ b/BP_05_EX_Ch10.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPVpWcrRcP4o3wKfOfBgtb6",
+      "authorship_tag": "ABX9TyPTcU+N4xsUL0jADoiVdB9F",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -312,7 +312,7 @@
         "scissors_image = PhotoImage(file=\"d:/python/scissors.gif\")\n",
         "\n",
         "user_image = Label(text=\"사용자\", image=rock_image)\n",
-        "user_image.image = rock_imgae\n",
+        "user_image.image = rock_image\n",
         "compare = Label(main_window, justify=CENTER, font=(\"Helvetica\", 30))\n",
         "oppo_image = Label(text=\"컴퓨터\", image=paper_image)\n",
         "oppo_image.image = paper_image\n",
@@ -338,7 +338,7 @@
         },
         "outputId": "09b32090-f270-4db2-fa2d-da31c94329d2"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
